--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "5",
     "konva": "^8.3.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
     "react-router-dom": "6",
@@ -43,6 +44,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.11",
     "typescript": "^4.5.4"
   }
