--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "history": "5",
     "konva": "^8.3.0",
     "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
-    "react-router-dom": "6",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +41,6 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
-    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.11",
     "typescript": "^4.5.4"
   }
